--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+backend/node_modules/
 
 # Expo
 .expo/
@@ -31,7 +32,9 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
 .env*.local
+backend/.env
 
 # typescript
 *.tsbuildinfo
@@ -39,3 +42,4 @@ yarn-error.*
 # generated native folders
 /ios
 /android
+
