--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "backend": "cd backend && node server.js",
+    "backend": "cd backend && npx kill-port 3000 && node server.js",
     "dev": "concurrently \"npm run backend\" \"npm start\""
   },
   "dependencies": {
